<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shaym.minesweeper.UI.MainActivity">


    <Button
        android:id="@+id/plyGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:layout_marginBottom="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RadioGroup
        android:id="@+id/radioGrp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <RadioButton
            android:id="@+id/easyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_btn"
            android:textColor="@color/white"/>


        <RadioButton
            android:id="@+id/MedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/med_btn"
            android:textColor="@color/white"/>


        <RadioButton
            android:id="@+id/HardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_btn"
            android:textColor="@color/white"/>




    </RadioGroup>

    <Button
        android:id="@+id/ldrbords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ldrboards"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/plyGame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="45dp"
        android:text= "@string/minesweeper"
        android:layout_marginTop="56dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
